test/tag/extra_close.stderr
error: encountered a closing HTML element "button" without a corresponding opening tag.
 --> test/tag/extra_close.rs:7:11
  |
7 |         </button> // <- random
  |           ^^^^^^
